--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node src/index.ts",
-    "build": "tsc",
+    "build": "tsc && npm install pm2 -g",
     "start": "node dist/index.js",
     "prod": "pm2 start dist/index.js --name basic"
   },
