--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node src/index.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "npm install ts-node --save-dev && npm install typescript --save-dev && tsc -p tsconfig.json", 
     "start": "node dist/index.js"
   },
   "keywords": [],
