--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/index.ts",
-    "build": "npm install ts-node --save-dev && npm install typescript --save-dev && tsc -p tsconfig.json", 
+    "dev": "nodemon src/index.ts",
+    "build": "npm install ts-node --save-dev && npm install typescript --save-dev && tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -14,10 +14,14 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.0",
-    "express": "^4.21.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.6",
+    "nodemon": "^3.1.7",
     "prisma": "^5.21.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
